[package]
name = "bevy_mod_picking"
version = "0.6.0"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A 3D mouse picking and raycasting plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "raycast"]
categories = ["game-engines", "rendering"]
resolver = "2"

[dependencies]
bevy = {git = "https://github.com/paxsethorld/bevy-fork.git", branch = "local-0-8-release", default-features = false, features = ["render", "bevy_asset","bevy_scene",]}
#bevy = { version = "0.8", default-features = false, features = ["render", "bevy_asset","bevy_scene",] }
bevy_mod_raycast = { git = "https://github.com/paxsethorld/bevy_mod_raycast.git", branch = "trial#2" }

# [dev-dependencies]
# bevy = { version = "0.8", default-features = false, features = [
#     "bevy_winit",
#     "x11",
# ] }
